@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 4;
+use Test::More tests => 5;
 
 use File::Spec;
 use XML::RSS;
@@ -21,9 +21,15 @@ is ($item_with_guid_true->{"permaLink"},
 );
 
 # TEST
-is ($item_with_guid_missing->{"permaLink"}, 
+ok ((!$item_with_guid_missing->{"permaLink"}),
+    "guid's isPermaLink is missing (implicitly false), so the item permalink property should not be set"
+);
+
+# TEST
+is ($item_with_guid_missing->{"guid"}, 
     "http://community.livejournal.com/lj_dev/713810.html",
-    "guid's isPermaLink is missing, so the item permalink property should be set to the value of the guid tag"
+    "guid's isPermaLink is missing (implicitly false), so item->{guid}" . 
+    " should be equal to the contents of the guid element",
 );
 
 # TEST
