@@ -11,6 +11,10 @@ Revision history for Perl module XML::RSS
            - updated the URLs for information about RSS mentioned under
            "=head1 DESCRIPTION", based on a Google search. 
            - (Shlomi Fish)
+       - Fixed http://rt.cpan.org/Ticket/Display.html?id=33001 :
+           - made sure that isPermalink is true if and only if the isPermalink
+           attribute is "true". Not if it is non-existent, etc.
+           - this modified the behaviour of the module.
 
 1.31 - June 29, 2007
        - Fixed the save() function to handle perl-5.6.x (and possibly below)
